fix(stacked): improve spacing around tables

--- a/Content/Styles/Stack/Site.scss
+++ b/Content/Styles/Stack/Site.scss
@@ -250,6 +250,10 @@ html, body {
     position: relative;
 }
 
+.answerContainer {
+    margin: 10px;
+    margin-left: 0;
+}
 
 .answerContainer table {
     width: 100.2% !important;
